Bug 877361 - Modify navbar transitions somewhat to avoid the 'gaping' problem between the soft keyboard and navbar. r=fryn, mbrubeck
UltraBlame original commit: 8dc5770ad79d5944f16fc65d5a5da659d9ad3f83

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -2003,9 +2003,6 @@ transition
 transform
 metro_animation_duration
 metro_animation_easing
-bottom
-metro_animation_duration
-metro_animation_easing
 ;
 font
 -
@@ -2109,6 +2106,24 @@ visible
 transform
 :
 none
+;
+}
+#
+stack
+[
+keyboardVisible
+]
+>
+appbar
+{
+transition
+:
+transform
+metro_animation_duration
+metro_animation_easing
+bottom
+appbar_keyboard_slideup_duration
+metro_animation_easing
 ;
 }
 appbar
