--- a/browser/metro/theme/forms.css
+++ b/browser/metro/theme/forms.css
@@ -46,9 +46,6 @@ transition
 transform
 metro_animation_duration
 metro_animation_easing
-bottom
-metro_animation_duration
-metro_animation_easing
 ;
 background
 -
@@ -68,6 +65,27 @@ showing
 transform
 :
 none
+;
+}
+#
+stack
+[
+keyboardVisible
+]
+>
+#
+content
+-
+navigator
+{
+transition
+:
+transform
+metro_animation_duration
+metro_animation_easing
+bottom
+appbar_keyboard_slideup_duration
+metro_animation_easing
 ;
 }
 #
